# devguard

./: .gitignore  Cargo.toml  DEVGUARD_CONTEXT.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: windows-appcontainer-v0.2.md
src/: audit.rs  console.rs  doctor.rs  env.rs  main.rs  network.rs  paths.rs  sandbox.rs  scanner.rs
