[package]
name = "devguard-token-firewall"
version = "0.1.0"
edition = "2024"
description = "Experimental HOME/env isolation for package-manager install scripts"
license = "MIT"
repository = "https://github.com/anthonystepvoy/devguard"

[[bin]]
name = "devguard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tempfile = "3"
colored = "3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
toml = "0.8"
glob = "0.3"
home = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Future: nix for namespaces, seccomp

[target.'cfg(target_os = "macos")'.dependencies]
# Future: Security framework bindings

[target.'cfg(target_os = "windows")'.dependencies]
# Future: windows-sys for AppContainer, DPAPI, WFP
